<resources>
    <string name="app_name">My Wechat</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hint_username">用户名</string>
    <string name="hint_password">密码</string>
    <string name="button_confirm">登录</string>
    <string name="button_register">注册</string>
    <string name="checkbox_re">记住密码</string>
</resources>
