<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="100dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:background="#388A95">
    <ImageView
        android:id="@+id/iv_1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        android:src="@drawable/person"/>
    <EditText
        android:id="@+id/et_login_usr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_username"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_below="@id/iv_1"/>
    <EditText
        android:id="@+id/et_login_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:layout_below="@id/et_login_usr"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>
    <LinearLayout
        android:id="@+id/ly_1"
        android:layout_below="@id/et_login_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/cb_rm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_re"
            android:textColor="@color/white"
            android:layout_gravity="start"
            android:layout_weight="3"/>

        <Button
            android:id="@+id/bt_login_register"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:text="@string/button_register"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_weight="1"/>
    </LinearLayout>

    <Button
        android:id="@+id/bt_login_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/ly_1"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_border"

        android:text="@string/button_confirm"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white" />

</RelativeLayout>